tests/expr/add.dora
// error: 1

fn main() {
    assert((1 + 3) == 4);
    assert((-1 + 3) == 2);
    assert((0 + 2) == 2);
    assert((2 + 0) == 2);
    assert((1 + 1) == 0);

    var x = -5 + 4;
    assert(-1 == x);
}
